force-app/main/default/objects/DealerGroupRelationship__c/DealerGroupRelationship__c.object-meta.xml
<CustomObject>
    <label>DealerGroupRelationship</label>
    <nameField>
        <displayFormat>DG-{00000000}</displayFormat>
        <label>DealerGroupRelationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealerGroupRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>