force-app/main/default/objects/DealerGroupRelationship__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>DealerGroupRelationships</relationshipLabel>
    <relationshipName>DealerGroupRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>