force-app/main/default/objects/DealerGroupRelationship__c/fields/Profile_Group__c.field-meta.xml
<CustomField>
    <fullName>Profile_Group__c</fullName>
    <label>Profile Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>